--- a/akka/src/main/resources/www/index.html
+++ b/akka/src/main/resources/www/index.html
@@ -19,7 +19,7 @@
         }
     </style>
 </head>
-<body ng-controller="Controller">
+<body>
 
 <div class="container" style="margin-top: 20px" ng-view>
 </div>
