host config should be available despite the fact that the yellow warning message is showed, closes #18

--- a/actor/src/main/resources/www/index.html
+++ b/actor/src/main/resources/www/index.html
@@ -17,10 +17,19 @@
 
 <body ng-controller="Controller">
 
-<div class="container-fluid" ng-hide="connected">
+<div class="container" ng-hide="connected">
     <div class="overlay"></div>
     <div class="col-xs-12 alert alert-warning overlay-message">
-        <h4>Backend is stopped...</h4>
+        <h4>Backend is not accessible...</h4>
+            <div class="input-group">
+            <span class="input-group-addon">
+                <span class="glyphicon glyphicon-cog"></span>
+            </span>
+            <input type="text" class="form-control" ng-model="webSocketUrl">
+            <span class="input-group-btn">
+                <button class="btn btn-default" type="button" ng-click="setWebSocketUrl(webSocketUrl)">Set</button>
+            </span>
+        </div>
     </div>
 </div>
 
